# bignum

./: Cargo.toml  README.md
benches/: multi.rs
bignum-proc-macro/: Cargo.toml
bignum-proc-macro/src/: lib.rs
bignum-proc-macro/tests/: test.rs
src/: alt_base.rs  bignumold.rs  cache.rs  consts.rs  error.rs  lib.rs  macros.rs  main.rs  myu128.rs  old_methods.rs  powers.rs  random.rs  redesign.rs  traits.rs  utils.rs
src/bignumold/: old_impl.rs  old_macros.rs  old_methods.rs  old_utils.rs
