[package]
name = "bignumbe-rs"
version = "0.1.7"
edition = "2021"
description = "Large, medium-precision numbers"
repository = "https://github.com/DylanBulfin/bignumbe-rs"
documentation = "https://docs.rs/bignumbe-rs/latest/bignumbe_rs"
license = "GPL-3.0"

[features]
default = ["proc-macro"]
random = ["dep:rand"]
proc-macro = ["dep:bignum-proc-macro"]

[dependencies]
rand = {version = "0.8.5", optional = true}
bignum-proc-macro = {path = "./bignum-proc-macro", optional= true}

[dev-dependencies]
rand = "0.8.5"
