[package]
name = "bignumbe-rs"
author = "Dylan Bulfin"
version = "0.1.8"
edition = "2021"
description = "Large, medium-precision numbers"
repository = "https://github.com/DylanBulfin/bignumbe-rs"
documentation = "https://docs.rs/bignumbe-rs/latest/bignumbe_rs"
license = "GPL-3.0"

[features]
random = ["dep:rand"]
proc-macro = ["dep:bignum-proc-macro"]

[dependencies]
rand = { version = "0.8.5", optional = true }
bignum-proc-macro = { version = "0.1.0", optional = true }

# Placed here to make them available for testing
[dev-dependencies]
rand = "0.8.5"
bignum-proc-macro = "0.1.0"
