[package]
name = "bignumbe-rs"
version = "0.1.10"
edition = "2021"
description = "Large, medium-precision numbers"
repository = "https://github.com/DylanBulfin/bignumbe-rs"
documentation = "https://docs.rs/bignumbe-rs/latest/bignumbe_rs"
license = "GPL-3.0"

[features]
random = ["dep:rand"]
macro = ["dep:bignumbe-rs-macro"]

[dependencies]
rand = { version = "0.8.5", optional = true }
bignumbe-rs-macro = { version = "0.1.0", optional = true }

# Placed here to make them available for testing
[dev-dependencies]
rand = "0.8.5"
bignumbe-rs-macro = "0.1.0"
