[package]
name = "bignumbe-rs-macro"
version = "0.1.0"
edition = "2021"
description = "Macro for an efficient arbitrary base for bignumbe-rs library"
repository = "https://github.com/DylanBulfin/bignumbe-rs"
documentation = "https://docs.rs/bignumbe-rs/latest/bignumbe_rs_macro"
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.90"
proc-macro2 = "1.0.92"
